--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta http-equiv="content-type" content="text/html; charset=utf-8">
 	<title>Экоэнерго - Заглавная</title>
 	<link rel="stylesheet" href="css/index.css" type="text/css"/>
+	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 	<script src="js/jq/jq.js"></script>
 	<script src="http://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
 	<script src="js/map.js"></script>
@@ -20,23 +21,48 @@
 			--><a href="#">Объекты</a><!--
 			--><a href="#">Контакты</a><!--
 			--><a href="#">Партнеры</a>
+			<br/>
+			<ul id="info">
+				<li>Светодиодное освещение</li>
+				<li>+7<span class="blue"> (812) </span>643 01 95 | <span class="blue">info</span>@ecoenergo.spb.ru</li>
+				<li>Санкт-Петербург</li>
+			</ul>
 		</nav>
 	</header>
-	<ul id="info">
-		<li>Светодиодное освещение</li>
-		<li>+7<span class="blue"> (812) </span>643 01 95 | <span class="blue">info</span>@ecoenergo.spb.ru</li>
-		<li>Санкт-Петербург</li>
-	</ul>
 	<div class="container">
 		<nav>
-			<a href="#"><img src="img/icons/industry.png" /></a>
-			<a href="#"><img src="img/icons/water.png" /></a>
-			<a href="#"><img src="img/icons/gas.png" /></a>
-			<a href="#"><img src="img/icons/street.png" /></a>
-			<a href="#"><img src="img/icons/sport.png" /></a>
-			<a href="#"><img src="img/icons/anchor.png" /></a>
-			<a href="#"><img src="img/icons/shop.png" /></a>
-			<a href="#"><img src="img/icons/livestock.png" /></a>
+			<a href="#">
+				<img src="img/icons/nav/industry.png" />
+				<p>Промышленность и склады</p>
+			</a>
+			<a href="#">
+				<img src="img/icons/nav/water.png" />
+				<p>Водные сооружения</p>
+			</a>
+			<a href="#">
+				<img src="img/icons/nav/gas.png" />
+				<p>Заправки и нкфтехранилища</p>
+			</a>
+			<a href="#">
+				<img src="img/icons/nav/street.png" />
+				<p>Уличное освещение</p>
+			</a>
+			<a href="#">
+				<img src="img/icons/nav/sport.png" />
+				<p>Спортивные соорежения</p>
+			</a>
+			<a href="#">
+				<img src="img/icons/nav/anchor.png" />
+				<p>Судостроение</p>
+			</a>
+			<a href="#">
+				<img src="img/icons/nav/shop.png" />
+				<p>Торгово-развлекательные центры</p>
+			</a>
+			<a href="#">
+				<img src="img/icons/nav/livestock.png" />
+				<p>Животноводство</p>
+			</a>
 		</nav>
 		<div id="advantages">
 		<ul>
@@ -98,6 +124,15 @@
 	</div>
 	<footer>
 		<ul>
+			<li><img src="img/icons/footer/home.png" /></li>
+			<li><img src="img/icons/footer/products.png" /></li>
+			<li><img src="img/icons/footer/benefit.png" /></li>
+			<li><img src="img/icons/footer/certificates.png" /></li>
+			<li><img src="img/icons/footer/facilities.png" /></li>
+			<li><img src="img/icons/footer/contacts.png" /></li>
+			<li><img src="img/icons/footer/partners.png" /></li>
+		</ul>
+		<ul>
 			<li>На главную</li>
 			<li>Продукты</li>
 			<li>Выгода</li>
@@ -105,6 +140,16 @@
 			<li>Объекты</li>
 			<li>Контакты</li>
 			<li>Партнеры</li>
+		</ul>
+		<ul>
+			<li><img src="img/icons/nav/raw-industry.png" /></li>
+			<li><img src="img/icons/nav/raw-water.png" /></li>
+			<li><img src="img/icons/nav/raw-gas.png" /></li>
+			<li><img src="img/icons/nav/raw-street.png" /></li>
+			<li><img src="img/icons/nav/raw-sport.png" /></li>
+			<li><img src="img/icons/nav/raw-anchor.png" /></li>
+			<li><img src="img/icons/nav/raw-shop.png" /></li>
+			<li><img src="img/icons/nav/raw-livestock.png" /></li>
 		</ul>
 		<ul>
 			<li>Промышленность и склады</li>
@@ -117,8 +162,14 @@
 			<li>Животноводство</li>
 		</ul>
 		<ul>
+			<li><img src="img/icons/footer/lg.png" /></li>
+			<li><img src="img/icons/footer/location.png" /></li>
+			<li><img src="img/icons/footer/phone2.png" /></li>
+			<li><img src="img/icons/footer/phone1.png" /></li>
+		</ul>
+		<ul>
 			<li>ООО ЭкоЭнерго</li>
-			<li>Санкт-Петербург, <br/>ул. Вербная дом 1 офис 7</li>
+			<li>C.-Петербург, ул. Вербная 1, офис 7</li>
 			<li>+7 (812) 643 01 95</li>
 			<li>+7 (981) 181 14 95</li>
 		</ul>
