--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 			</a>
 			<a href="#">
 				<img src="img/icons/nav/gas.png" />
-				<p>Заправки и нкфтехранилища</p>
+				<p>Заправки и нефтехранилища</p>
 			</a>
 			<a href="#">
 				<img src="img/icons/nav/street.png" />
@@ -49,7 +49,7 @@
 			</a>
 			<a href="#">
 				<img src="img/icons/nav/sport.png" />
-				<p>Спортивные соорежения</p>
+				<p>Спортивные сооружения</p>
 			</a>
 			<a href="#">
 				<img src="img/icons/nav/anchor.png" />
