--- a/index.html
+++ b/index.html
@@ -82,6 +82,9 @@
 				<p>экономия потребляемой энергии</p>
 			</li>
 		</ul>
+		<div id="adv-buttons">
+			<a href="#">Перейти к списку товаров</a>
+		</div>
 	</div>
 	</div>
 	<div class="container">
