fixes and comments

--- a/blue/index.html
+++ b/blue/index.html
@@ -89,30 +89,36 @@
 	<div class="container">
 		<div id="news">
 			<h2>Новости</h2>
-			<div class="news-item">
-				<h4 class="news-date">5 Фев 2016</h4>
-				<img src="img/news/1.jpg">
-				<div class="news-body">
-					<h3>Компания «ЭкоЭнерго» выступила с докладом в рамках технико-экономического совета Комитета ГД по природным ресурсам и экологии</h3>
-					<p>Член Технико-экономического совета Шуховцова Галина Георгиевна–представитель компании ООО«ЭкоЭнерго» выступила с докладом на тему «Отличие...</p>
+			<a href="#">
+				<div class="news-item">
+					<h4 class="news-date">5 Фев 2016</h4>
+					<img src="img/news/1.jpg">
+					<div class="news-body">
+						<h3>Компания «ЭкоЭнерго» выступила с докладом в рамках технико-экономического совета Комитета ГД по природным ресурсам и экологии</h3>
+						<p>Член Технико-экономического совета Шуховцова Галина Георгиевна–представитель компании ООО«ЭкоЭнерго» выступила с докладом на тему «Отличие...</p>
+					</div>
 				</div>
-			</div>
-			<div class="news-item">
-				<h4 class="news-date">13 Ноя 2015</h4>
-				<img src="img/news/2.gif">
-				<div class="news-body">
-					<h3>Компания «ЭкоЭнерго» на выставке «INTERLIGHTING MOSCOW»</h3>
-					<p>10-13 ноября 2015г., компания «ЭкоЭнерго» приняла участие в международной выставке декоративного и...</p>
+			</a>
+			<a href="#">
+				<div class="news-item">
+					<h4 class="news-date">13 Ноя 2015</h4>
+					<img src="img/news/2.gif">
+					<div class="news-body">
+						<h3>Компания «ЭкоЭнерго» на выставке «INTERLIGHTING MOSCOW»</h3>
+						<p>10-13 ноября 2015г., компания «ЭкоЭнерго» приняла участие в международной выставке декоративного и...</p>
+					</div>
 				</div>
-			</div>
-			<div class="news-item">
-				<h4 class="news-date">10 Окт 2015</h4>
-				<img src="img/news/3.jpg">
-				<div class="news-body">
-					<h3>Компания «ЭкоЭнерго» приняла участие в открытии «Максидома» в Самаре</h3>
-					<p>Член Технико-экономического совета Шуховцова Галина Георгиевна–представитель компании ООО«ЭкоЭнерго» выступила с докладом на тему «Отличие...</p>
+			</a>
+			<a href="#">
+				<div class="news-item">
+					<h4 class="news-date">10 Окт 2015</h4>
+					<img src="img/news/3.jpg">
+					<div class="news-body">
+						<h3>Компания «ЭкоЭнерго» приняла участие в открытии «Максидома» в Самаре</h3>
+						<p>Член Технико-экономического совета Шуховцова Галина Георгиевна–представитель компании ООО«ЭкоЭнерго» выступила с докладом на тему «Отличие...</p>
+					</div>
 				</div>
-			</div>
+			</a>
 		</div>
 		<div id="contact">
 			<h2>Закажите консультацию</h2>
